force-app/main/default/objects/WorkOrderLineItem/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>