force-app/main/default/objects/WorkOrderLineItem/fields/Sage_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Sage_Case_Number__c</fullName>
    <label>Sage Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>