force-app/main/default/objects/WorkOrderLineItem/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Used to calculate Total and is being used for roll of summary.</description>
    <formula>Quantity__c   *   UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>