force-app/main/default/objects/WorkOrderLineItem/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <description>It is used instead of standard field Unit Price. because the standard field is bounded to product which should not as per business requirement.</description>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>