force-app/main/default/objects/WorkOrderLineItem/recordTypes/Life.recordType-meta.xml
<RecordType>
    <fullName>Life</fullName>
    <active>true</active>
    <description>For Life Science, Bioprocess, Pharmaceutical, Food &amp; Beverage, Water</description>
    <label>Life</label>
</RecordType>