force-app/main/default/objects/WorkOrderLineItem/recordTypes/T_M.recordType-meta.xml
<RecordType>
    <fullName>T_M</fullName>
    <active>true</active>
    <description>For Laboratory Recorders, Oscilloscopes, Power Analyzers, Optical Test Equipment, Portable and Handheld Instruments, etc</description>
    <label>T&amp;M</label>
</RecordType>