force-app/main/default/objects/WorkOrderLineItem/recordTypes/YEF_T_M_Service.recordType-meta.xml
<RecordType>
    <fullName>YEF_T_M_Service</fullName>
    <active>true</active>
    <label>YEF T&amp;M Service</label>
</RecordType>